--- a/ZotPad/MainStoryboard_iPad.storyboard
+++ b/ZotPad/MainStoryboard_iPad.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11E53" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="11E53" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="5">
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
-        <development defaultVersion="4200" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1181"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1498"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller - Libraries-->
@@ -619,19 +618,19 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="TdJ-mi-Kkl"/>
-                                    <barButtonItem title="View manual" id="Xcx-3g-5bb">
+                                    <barButtonItem title="User manual" id="Xcx-3g-5bb">
                                         <connections>
                                             <action selector="showManual:" destination="NMI-xk-7BP" id="Ne1-rd-mTw"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="JR0-ml-0d3"/>
-                                    <barButtonItem title="Online support" id="4SY-i7-36O">
+                                    <barButtonItem title="Questions and feedback" id="4SY-i7-36O">
                                         <connections>
-                                            <action selector="onlineSupport:" destination="NMI-xk-7BP" id="cja-qn-0hU"/>
+                                            <action selector="knowledgeBase:" destination="NMI-xk-7BP" id="J3Z-ox-Gjv"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="eC6-CW-rap"/>
-                                    <barButtonItem title="Email support" id="DwQ-yf-Wgd">
+                                    <barButtonItem title="Contact support" id="DwQ-yf-Wgd">
                                         <connections>
                                             <action selector="emailSupport:" destination="NMI-xk-7BP" id="oOP-eD-dJP"/>
                                         </connections>
@@ -718,8 +717,9 @@
             <relationships>
                 <relationship kind="action" name="dismiss:"/>
                 <relationship kind="action" name="emailSupport:"/>
+                <relationship kind="action" name="feedback:"/>
+                <relationship kind="action" name="knowledgeBase:"/>
                 <relationship kind="action" name="manageKey:"/>
-                <relationship kind="action" name="onlineSupport:"/>
                 <relationship kind="action" name="showManual:"/>
                 <relationship kind="outlet" name="logView" candidateClass="UITextView"/>
                 <relationship kind="outlet" name="manualButton" candidateClass="UIBarButtonItem"/>
